--- a/etc/greetd-config.toml
+++ b/etc/greetd-config.toml
@@ -2,6 +2,6 @@
 vt = 1
 
 [default_session]
-command = "tuigreet --cmd Hyprland" --time --remember --remember-session --asterisks --window-padding 16
+command = "tuigreet --cmd Hyprland --time --remember --remember-session --asterisks"
 user = "greeter"
 
